[gd_scene load_steps=2 format=3 uid="uid://3mjqyq4itqfw"]

[ext_resource type="Script" uid="uid://ds37a1byh54n4" path="res://Menu/MainMenu.gd" id="1_e1xpn"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_e1xpn")

[node name="CenterContainer" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 0
offset_left = 256.0
offset_top = 184.0
offset_right = 544.0
offset_bottom = 415.0

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 33
text = "ZPG   Hero story"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Новая игра"

[node name="LoadGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Загрузить"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Выйти из игры"

[node name="VersionLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 9
size_flags_vertical = 6
theme_override_font_sizes/font_size = 10
horizontal_alignment = 2
vertical_alignment = 1

[node name="VersionLabel2" type="Label" parent="CenterContainer"]
layout_mode = 2
offset_left = 488.0
offset_top = 568.0
offset_right = 776.0
offset_bottom = 582.0
size_flags_horizontal = 9
size_flags_vertical = 6
theme_override_font_sizes/font_size = 10
text = "By Blago                         v0_033"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
